<resources>
    <string name="app_name">Транслятор Морзе</string>
    <string name="lang_button_default">RU</string>
    <string name="flashlight_button_description">Воспроизвести фонариком</string>
    <string name="microphone_button_description">Записать сообщение</string>
    <string name="speaker_button_description">Воспроизвести звуком</string>
    <string name="translate_button">Перевести</string>
    <string name="input_hint">Ввод</string>
    <string name="output_hint">Вывод</string>
</resources>