<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity" >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_upper"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/toolbar"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/lang_button"
        android:layout_width="wrap_content"
        android:layout_height="55sp"
        android:layout_marginEnd="5sp"
        android:backgroundTint="@color/button_background"
        android:fontFamily="@font/aoboshi_one"
        android:text="@string/lang_button_default"
        android:textColor="@color/button_text"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar_upper"
        app:layout_constraintEnd_toEndOf="@+id/toolbar_upper"
        app:layout_constraintTop_toTopOf="@+id/toolbar_upper"
        app:layout_constraintVertical_bias="1.0" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_lower"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/toolbar"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/translate_button"
        android:layout_width="wrap_content"
        android:layout_height="55sp"
        android:backgroundTint="@color/button_background"
        android:fontFamily="@font/aoboshi_one"
        android:text="@string/translate_button"
        android:textColor="@color/button_text"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar_lower"
        app:layout_constraintEnd_toEndOf="@+id/toolbar_lower"
        app:layout_constraintStart_toStartOf="@+id/toolbar_lower"
        app:layout_constraintTop_toTopOf="@+id/toolbar_lower" />

    <ImageButton
        android:id="@+id/flashlight_button"
        android:layout_width="55sp"
        android:layout_height="55sp"
        android:contentDescription="@string/flashlight_button_description"
        android:scaleType="fitCenter"
        android:backgroundTint="@color/button_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/toolbar_lower"
        app:layout_constraintTop_toTopOf="@+id/toolbar_lower"
        app:srcCompat="@drawable/flashlight" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/toolbar_lower"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_upper">

        <EditText
            android:id="@+id/text_input"
            android:layout_width="match_parent"
            android:layout_height="310sp"
            android:autofillHints="textInput"
            android:hint="@string/input_hint"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            tools:ignore="VisualLintTextFieldSize" />

        <TextView
            android:id="@+id/text_output"
            android:layout_width="match_parent"
            android:layout_height="310sp"
            android:layout_marginStart="5sp"
            android:hint="@string/output_hint"
            android:textSize="18sp" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>